# amazing_web_url_reader

./: .gitignore  README.md  amazing_web_url_reader.py  main.py  pyproject.toml
tests/: test_integration_smoke.py  test_main.py  test_playwright.py  test_server.py  test_truncation.py  test_utils.py
